--- a/service-api-gateway/Dockerfile
+++ b/service-api-gateway/Dockerfile
@@ -10,10 +10,12 @@ COPY . /app
 
 RUN mvn clean
 
+RUN mvn package -DskipTests
+
 FROM amazoncorretto:17-alpine
 
 COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-jar", "/app.jar"]
