--- a/service-product/src/main/resources/application.properties
+++ b/service-product/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+spring.data.mongodb.uri=mongodb://localhost:27017/product_service_db
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 server.port=8081
+spring.application.name=service-product
