--- a/service-order/src/main/resources/application.properties
+++ b/service-order/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/order_service
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/service_order_db
+spring.datasource.username=admin
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
