--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,8 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - service-discovery
     networks:
@@ -54,6 +56,8 @@ services:
     restart: unless-stopped
     ports:
       - "8081:8081"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - service-discovery
       - service-api-gateway
@@ -67,6 +71,8 @@ services:
     restart: unless-stopped
     ports:
       - "8082:8082"
+    environment:
+      - SPRING_PROFILES_ACTIVE=docker
     depends_on:
       - service-discovery
       - service-api-gateway
